--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-12">
-          <h1>Take a look at some of my best accomplishments. All in one place.</h1>
+          <h1>Take a look at some of my best work. All in one place.</h1>
         </div>
       </div>
     </div>
