--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </section>
   <!-- Company -->
   <section id="photographycompany">
-    <h2 class="pricing-header">My Small Photo Company</h2>
+    <h2 class="pricing-header">My Photo Company</h2>
     <p class="individualBusiness">Some examples of pictures I have taken during the past 4 years that I have ran my independent photorgaphy business.</p>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
