--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <!-- Company -->
   <section id="photographycompany">
     <h2 class="pricing-header">My Photo Company</h2>
-    <p class="individualBusiness">Some examples of pictures I have taken during the past 4 years that I have ran my independent photorgaphy business.</p>
+    <p class="individualBusiness">Here are some photo examples from my 4-year photography and videography company.</p>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
