--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <img class="card-img-top" src="images/1_LyZcwuLWv2FArOumCxobpA.png" alt="javascript">
           <div class="card-body">
             <h5 class="card-title">Javascript Alerts and Modulo Mastery</h5>
-            <p class="card-text">Can help customers get instant results on their inputs with javascript.</p>
+            <p class="card-text">I can help customers get instant results on their inputs with javascript.</p>
             <a href="projectsAndLinks/deRijkeWeddingPlannerLab/deRijkeWeddingPage.html" class="btn btn-dark">Check it out!</a>
           </div>
         </div>
@@ -146,7 +146,7 @@
           <img class="card-img-top" src="images/CSS3_logo.svg.png" alt="css">
           <div class="card-body">
             <h5 class="card-title">CSS Table Creation</h5>
-            <p class="card-text">Here's an examble of capabilities in css and html with tables, a reliable alternative when excel will not work for financial data.</p>
+            <p class="card-text">Here's an examble of my capabilities in css and html with tables, a reliable alternative when excel will not work for financial data.</p>
             <a href="projectsAndLinks/week2-coding-tables-jwderijke-main 3/deRijkeLab2.html" class="btn btn-dark">Check it out!</a>
           </div>
         </div>
